fix: fix colour contrast

--- a/src/css/banners.css
+++ b/src/css/banners.css
@@ -65,5 +65,5 @@
 }
 .navbar__link:hover,
 .navbar__link--active {
-  color: var(--ifm-color-accent) !important;
+  color: var(--ifm-color-banner-text) !important;
 }
