--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -3,11 +3,12 @@
 @import url(../fonts/Varela-Round/varela-round.css);
 
 :root {
-  --ifm-color-primary: #00b050;
+  --ifm-color-primary: #00612c;
   --ifm-color-banner: #000000;
+  --ifm-color-banner-text: #00b050;
 
   --ifm-color-text: #353535;
-  --ifm-color-accent: #00b050;
+  --ifm-color-accent: #00612c;
   --ifm-color-f898f31: #fffefe;
   --ifm-color-0d046a4: #e9e9e9;
   --ifm-color-c6c574f: #f9f9f9;
@@ -136,9 +137,9 @@ canvas {
 .menu__link--active,
 .table-of-contents__link--active {
   font-weight: var(--ifm-typography-6ed476c-font-weight);
-  color: var(--ifm-color-primary) !important;
+  color: var(--ifm-color-accent) !important;
 }
 
 .menu__link:hover {
-  color: var(--ifm-color-primary) !important;
+  color: var(--ifm-color-accent) !important;
 }
